--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /[Uu]ser[Ss]ettings/
 /[Pp]ackages/
 .vsconfig
+ProjectSettings
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
