--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,8 @@
 /[Uu]ser[Ss]ettings/
 /[Pp]ackages/
 .vsconfig
-ProjectSettings
+/[Pp]roject[Ss]ettings/
+
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
