--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@
 /[Pp]ackages/
 .vsconfig
 /[Pp]roject[Ss]ettings/
-
+/Assets/
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
 /[Mm]emoryCaptures/
